# AnalizadorTexto

./: .gitignore  CMakeList.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
include/core/: Diccionario.h  DocumentoTexto.h  EtiquetadorPGO.h  MotorNPL.h  Palabra.h  Token.h  Tokenizador.h
include/utils/: Error.h  ErrorMacros.h  LineaComandos.h  Logger.h
src/core/: Diccionario.cpp  DocumentoTexto.cpp  EtiquetadorPGO.cpp  MotorNPL.cpp  Palabra.cpp  Tokenizador.cpp
src/utils/: Error.cpp  LineaComandos.cpp  Logger.cpp
